objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <description>SFDC1-2060 Contract Status fields
SFDC1-7222: Adding picklist value &quot;Waiting on PO&quot;</description>
        <inlineHelpText>Please select from dropdown menu</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Signed By Customer</fullName>
                    <label>Signed by Customer</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validated PO Pending</fullName>
                </value>
                <value>
                    <fullName>Validated-POD Pending</fullName>
                </value>
                <value>
                    <fullName>Validated-BSI Pending</fullName>
                </value>
                <value>
                    <fullName>Validated by ConsOps</fullName>
                </value>
                <value>
                    <fullName>Created in Error</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Sent to Delivery</fullName>
                </value>
                <value>
                    <fullName>Sent to OM/Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered to Customer</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; Processed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Scheduled Termination</fullName>
                </value>
                <value>
                    <fullName>Unscheduled Termination</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                    <isActive>false</isActive>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <isActive>false</isActive>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                    <isActive>false</isActive>
                    <label>Delivered</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                    <isActive>false</isActive>
                    <label>Received</label>
                </value>
                <value>
                    <fullName>Sent To OM</fullName>
                    <isActive>false</isActive>
                    <label>Sent To OM</label>
                </value>
                <value>
                    <fullName>Sent for Delivery</fullName>
                    <isActive>false</isActive>
                    <label>Sent for Delivery</label>
                </value>
                <value>
                    <fullName>Waiting on PO</fullName>
                    <isActive>false</isActive>
                    <label>Waiting on PO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractTermDays__c</fullName>
        <description>SFDC1-2405 Contract Term (Days)
SFDC1-6942 Adding value &apos;14&apos; to picklist</description>
        <inlineHelpText>Contract Term in Days</inlineHelpText>
        <label>Contract Term (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                    <default>true</default>
                    <label>14</label>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>10.0</fullName>
                    <isActive>false</isActive>
                    <label>10.0</label>
                </value>
                <value>
                    <fullName>101</fullName>
                    <isActive>false</isActive>
                    <label>101</label>
                </value>
                <value>
                    <fullName>101.0</fullName>
                    <isActive>false</isActive>
                    <label>101.0</label>
                </value>
                <value>
                    <fullName>102</fullName>
                    <isActive>false</isActive>
                    <label>102</label>
                </value>
                <value>
                    <fullName>102.0</fullName>
                    <isActive>false</isActive>
                    <label>102.0</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <isActive>false</isActive>
                    <label>11</label>
                </value>
                <value>
                    <fullName>11.0</fullName>
                    <isActive>false</isActive>
                    <label>11.0</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <isActive>false</isActive>
                    <label>110</label>
                </value>
                <value>
                    <fullName>110.0</fullName>
                    <isActive>false</isActive>
                    <label>110.0</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <isActive>false</isActive>
                    <label>12</label>
                </value>
                <value>
                    <fullName>12.0</fullName>
                    <isActive>false</isActive>
                    <label>12.0</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <isActive>false</isActive>
                    <label>120</label>
                </value>
                <value>
                    <fullName>120.0</fullName>
                    <isActive>false</isActive>
                    <label>120.0</label>
                </value>
                <value>
                    <fullName>121</fullName>
                    <isActive>false</isActive>
                    <label>121</label>
                </value>
                <value>
                    <fullName>121.0</fullName>
                    <isActive>false</isActive>
                    <label>121.0</label>
                </value>
                <value>
                    <fullName>122</fullName>
                    <isActive>false</isActive>
                    <label>122</label>
                </value>
                <value>
                    <fullName>122.0</fullName>
                    <isActive>false</isActive>
                    <label>122.0</label>
                </value>
                <value>
                    <fullName>123</fullName>
                    <isActive>false</isActive>
                    <label>123</label>
                </value>
                <value>
                    <fullName>123.0</fullName>
                    <isActive>false</isActive>
                    <label>123.0</label>
                </value>
                <value>
                    <fullName>124</fullName>
                    <isActive>false</isActive>
                    <label>124</label>
                </value>
                <value>
                    <fullName>124.0</fullName>
                    <isActive>false</isActive>
                    <label>124.0</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractTermInMonths__c</fullName>
        <description>SFDC1-4444  Formula field that calculates the number of months between the Contract Start Date and Contract End Date.
SFDC1-5366 Updated formula to reflect nearest number
SFDC1-7470 : Updated Formula to use the days as 30.5 as base</description>
        <formula>IF(ROUND((EndDate - StartDate)/30.5,0) == 0,1,IF((EndDate - StartDate)/30.5 == 1.5,FLOOR((EndDate - StartDate)/30.5),ROUND( (EndDate - StartDate)/30.5,0 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total duration of contract</inlineHelpText>
        <label>Contract Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractedPriceIncrease__c</fullName>
        <description>SFDC1-5201 Contracted Price Increase field for order form</description>
        <inlineHelpText>Add a percent if a specific custom annual price increase has been specified in the customer order/contract</inlineHelpText>
        <label>Contracted Price Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CopytoBillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4421 This field when checked will copy Global Alliance Address fields over to Bill To fields</description>
        <label>Copy to Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountersignatureOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7680 Countersignature Owner</description>
        <inlineHelpText>Please select Countersignature Owner</inlineHelpText>
        <label>Countersignature Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CountersignatureOwnerContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountersignatureStatus__c</fullName>
        <description>SFDC1-7680 Countersignature Process</description>
        <inlineHelpText>Please select Countersignature Status</inlineHelpText>
        <label>Countersignature Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(Opportunity__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAnnualValue__c</fullName>
        <description>SFDC-525: Rollup field to display current year contract value</description>
        <inlineHelpText>Displays current year value of an active contract</inlineHelpText>
        <label>Current Annual Value</label>
        <summarizedField>ContractLineItemSchedule__c.SalesPrice__c</summarizedField>
        <summaryFilterItems>
            <field>ContractLineItemSchedule__c.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ContractLineItemSchedule__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CustomerAcceptanceRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-718;Does the customer have to accept that product has been dellivered or expectations met prior to invoice.  Usually on consluting (SOW) orders.</description>
        <label>Customer Acceptance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerCarrierAccount__c</fullName>
        <description>SFDC1-718;The account number delivery can charge if customer is paying for special delivery.
SFDC-2045 changing field data type to TEXT</description>
        <label>Customer Carrier Account #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataDistributionAllowed__c</fullName>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <formula>Opportunity__r.DataDistributionAllowed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select if distribution of data is allowed.</inlineHelpText>
        <label>Data Distribution Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataDistributionRights__c</fullName>
        <description>SFDC-2548 Global Alliance</description>
        <formula>Opportunity__r.DataDistributionRights__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If distribution is allowed, provide details and/or restrictions.</inlineHelpText>
        <label>Data Distribution Rights</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataRetrieval__c</fullName>
        <description>SFDC-2548 Global Alliance</description>
        <formula>IF ( INCLUDES (Opportunity__r.DataRetrieval__c , &quot;API&quot; ), &quot;API; &quot;,null ) &amp;
IF ( INCLUDES (Opportunity__r.DataRetrieval__c , &quot;Client Credentials&quot; ), &quot;Client Credentials; &quot;,null ) &amp;
IF ( INCLUDES (Opportunity__r.DataRetrieval__c , &quot;Others&quot; ), &quot;Others; &quot;,null ) &amp;
IF ( INCLUDES (Opportunity__r.DataRetrieval__c , &quot;SFTP&quot; ), &quot;SFTP; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates how the data may be accessed or retrieved.</inlineHelpText>
        <label>Data Retrieval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateLetterSent__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Date Letter Sent</description>
        <inlineHelpText>Enter Date when Letter Sent</inlineHelpText>
        <label>Date Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryPriority__c</fullName>
        <description>SFDC1-718; Decide the Delivery priority of a Contract</description>
        <label>Delivery Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traceable</fullName>
                </value>
                <value>
                    <fullName>Overnight</fullName>
                </value>
                <value>
                    <fullName>Two Day</fullName>
                </value>
                <value>
                    <fullName>Overnight AM</fullName>
                </value>
                <value>
                    <fullName>Intl Express</fullName>
                </value>
                <value>
                    <fullName>First Class</fullName>
                </value>
                <value>
                    <fullName>Customer Pickup</fullName>
                </value>
                <value>
                    <fullName>Mail Special Instructions</fullName>
                </value>
                <value>
                    <fullName>2nd Day Prepaid</fullName>
                </value>
                <value>
                    <fullName>Ground Prepaid</fullName>
                </value>
                <value>
                    <fullName>Overnight Prepaid</fullName>
                </value>
                <value>
                    <fullName>PAC</fullName>
                </value>
                <value>
                    <fullName>Collect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeployedHosted__c</fullName>
        <description>SFDC-2546 Global Alliance</description>
        <formula>IF ( INCLUDES (Opportunity__r.DeployedHosted__c, &quot;Deployed&quot; ), &quot;Deployed; &quot;,null ) &amp;
IF ( INCLUDES (Opportunity__r.DeployedHosted__c , &quot;Hosted&quot; ), &quot;Hosted; &quot;,null ) &amp;
IF ( INCLUDES (Opportunity__r.DeployedHosted__c , &quot;Managed Service&quot; ), &quot;Managed Service; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicate whether the Partner Service is Deployed, Hosted and/or a Managed Service.</inlineHelpText>
        <label>Deployed/Hosted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DerivedDataAllowed__c</fullName>
        <formula>Opportunity__r.DerivedDataAllowed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select if derived data rights are granted.</inlineHelpText>
        <label>Derived Data Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DerivedDataRights__c</fullName>
        <formula>Opportunity__r.DerivedDataRights__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If derived data is allowed, provide details and/or restrictions.</inlineHelpText>
        <label>Derived Data Rights</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Opportunity__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provide information about the deal motivation / objective.</inlineHelpText>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EarliestTerminationPeriod__c</fullName>
        <description>SFDC-1887 needed to comply with revenue recognition standards</description>
        <inlineHelpText>If the contract has a termination clause which allows the customer out of the contract early, please select the value that applies.</inlineHelpText>
        <label>Earliest Termination Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Cancellation</fullName>
                </value>
                <value>
                    <fullName>Year 1, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 1, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 1, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 1, End of Year</fullName>
                </value>
                <value>
                    <fullName>Year 2, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 2, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 2, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 2 End of Year</fullName>
                    <label>Year 2, End of Year</label>
                </value>
                <value>
                    <fullName>Year 3, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 3, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 3, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 3, End of Year</fullName>
                </value>
                <value>
                    <fullName>Year 4, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 4, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 4, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 4, End of Year</fullName>
                </value>
                <value>
                    <fullName>Year 5, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 5, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 5, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 5 End of Year</fullName>
                    <label>Year 5, End of Year</label>
                </value>
                <value>
                    <fullName>Year 6, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 6, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 6, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 6, End of Year</fullName>
                </value>
                <value>
                    <fullName>Year 7, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 7, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 7, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 7 End of Year</fullName>
                    <label>Year 7, End of Year</label>
                </value>
                <value>
                    <fullName>Year 8, Q1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>SFDC1-2405 Effective Date, SFDC1-10202 : Updated Help Text</description>
        <inlineHelpText>Date the Contract is legally binding</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <description>SFDC1-9301:Email Address</description>
        <inlineHelpText>Please provide the email address</inlineHelpText>
        <label>Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailBody__c</fullName>
        <description>SFDC-117 Field contains body of email sent to customer for signing Continuation Letter</description>
        <inlineHelpText>Contains body of email sent to customer for signing Continuation Letter.  Please note that there is a 2000 character limit on the email body.  If over the limit, your text will be truncated.</inlineHelpText>
        <label>Email Body</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exclusivity__c</fullName>
        <formula>Opportunity__r.Exclusivity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select if there is an exclusivity clause.</inlineHelpText>
        <label>Exclusivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExemptionFromIncreaseIfApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5807 : This field will hold the value of Exemption From Increase If Applicable</description>
        <inlineHelpText>This will be Exempted From Increase If Applicable</inlineHelpText>
        <label>Exemption From Increase If Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExhibitType__c</fullName>
        <description>SFDC-865 New picklist for Master agreement exhibit record type</description>
        <inlineHelpText>Exhibit type is required</inlineHelpText>
        <label>Exhibit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExistingAnnualRevenue__c</fullName>
        <description>SFDC1-9300:Price Increase Details section field creation</description>
        <inlineHelpText>Existing Annual Revenue</inlineHelpText>
        <label>Existing Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fastrack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5851 Checkbox on &quot;Order From&quot; contracts
SFDC1-10429:Update Fastrack to Fast Track</description>
        <inlineHelpText>Use Fast Track terms and conditions if under $100k</inlineHelpText>
        <label>Fast Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstYearContractValue__c</fullName>
        <description>SFDC1-5762 This field is a roll-up summary field that sums the First Year field from Contract Line Items on the Contract object</description>
        <label>First Year Contract Value</label>
        <summarizedField>ContractLineItem__c.FirstYear__c</summarizedField>
        <summaryForeignKey>ContractLineItem__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FreightForwarder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4421 This field will help with the channel partner functionality to create CP documents</description>
        <label>Freight Forwarder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeneralAgreementDate__c</fullName>
        <description>SFDC1-2209 This field helps user to select the General Agreement Date</description>
        <label>Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GeneralAgreementType__c</fullName>
        <description>SFDC1-2209 This field helps user select the current Agreement Type that the customer has signed that is the overarching agreement the order is falling under.
SFDC1-7189- Renaming &apos;General Agreement&apos; to &apos;Master Agreemant&apos;</description>
        <inlineHelpText>The Master Agreement Type must match the title of the signed agreement to bind Client.</inlineHelpText>
        <label>Master Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IHS Markit Master Agreement</fullName>
                </value>
                <value>
                    <fullName>IHS General Agreement</fullName>
                </value>
                <value>
                    <fullName>IHS Master Agreement</fullName>
                </value>
                <value>
                    <fullName>Markit Master Agreement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>IHS Markit General Agreement</fullName>
                    <isActive>false</isActive>
                    <label>IHS Markit General Agreement</label>
                </value>
                <value>
                    <fullName>Markit General Agreement</fullName>
                    <isActive>false</isActive>
                    <label>Markit General Agreement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneralAgreementValue__c</fullName>
        <description>SFDC1-2209 This field helps user provide the General Agreement Value</description>
        <label>Other Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1357 Contract Data Model
SFDC1-7189- Renaming &apos;General Agreement&apos; to &apos;Master Agreemant&apos;</description>
        <label>Master Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Agreement</value>
            </filterItems>
            <infoMessage>Please select a General Agreement Contract</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>GeneralAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressCity__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <label>Channel Partner Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressCountry__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <inlineHelpText>Channel Partner Address: Country/Territory</inlineHelpText>
        <label>Channel Partner Addr: Country/Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressPostalZipCode__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <label>Channel Partner Address: Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressStateProvince__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <label>Channel Partner Address: State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressStreet__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <label>Channel Partner Address: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceContactEmailAddress__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance Contact</description>
        <label>Channel Partner Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceContactFirstName__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance Contact</description>
        <label>Channel Partner Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceContactLastName__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance Contact</description>
        <label>Channel Partner Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceContactPhoneNumber__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance Contact</description>
        <label>Channel Partner Contact Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalSegments__c</fullName>
        <description>SFDC-1346 field to store comma separated values of global segment derived from contract line items</description>
        <inlineHelpText>Global segments rolled up from contract line items into one single field</inlineHelpText>
        <label>Global Segments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IHSMarkitCountryofIncorporation__c</fullName>
        <description>SFDC1-5203 This field populates from &quot;Incorporated in Country&quot; field on associated Legal Entity object</description>
        <formula>IHSMarkitLegalEntity__r.IncorporatedinCountry__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IHSM Incorporation Country/Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityCity__c</fullName>
        <description>SFDC1-905 IHS Markit Legal Entity: City</description>
        <formula>IHSMarkitLegalEntity__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IHS Markit Legal Entity: City</inlineHelpText>
        <label>IHS Markit Legal Entity: City</label>
        <type>Text</type>
    </fields>
</CustomObject>